# cmake-cuda-architectures-default-external

./: CMakeLists.txt  readme.md
cmake/: fetch_ccad.cmake
src/: main.cu
